HLS v6 hybrid #180744750 (#65)
Attempt to ship independent MP3 segments #180739382

When Nexus does not rehydrate, segments published should not include any from the stale chain #180742064

Remove any concept of chain revival- rely on healthcheck and k8s #180742259

Player should not interrupt stream playback when its backing Nexus or Ship is restarted #180742159

When Nexus rehydrates, parallel stream the detailed segment loading operations #180742513

Ship ffmpeg disable ID3v2 header for MP3 media segments #180742522

Nexus and Ship must load all audio and metadata via CDN not direct from S3 API! #180742075

Chain fabricated-ahead time needs to be represented in absolute time, not relative #180744105

* HttpClientProvider wraps an Apache Http Client Connection Pool

* Nexus grace period before stalling is now handled entirely through k8s

* Get rid of the varied chunk durations- it ain't helping

* threshold (in seconds) after which, if we haven't seen the work cycle happen, we're declaring this whole process dead